init version of putImageManifest
